GameMode, StartLevel, Project Settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Blueprints/DevLevel.DevLevel
+EditorStartupMap=/Game/Blueprints/DevLevel.DevLevel
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=1
